# ma-swift-logi

./: .dockerignore  .env.example  .gitignore  README.md  SwiftLogistics_Assignment4.txt  architecture_documentation.md  docker-compose.yml  test_create_order.py
infra/: gunicorn_conf.py
services/api_gateway/: Dockerfile  gunicorn_conf.py  pyproject.toml
services/api_gateway/app/: __init__.py  main.py
services/api_gateway/static/: admin.html  admin.js  api.js  app.js  auth.js  client.html  client.js  delivery.html  delivery.js  driver.html  driver.js  index.html  landing.css  landing.html  login.html  login.js  pickup.html  pickup.js  shared.js  styles.css
services/cms_mock_soap/: Dockerfile  gunicorn_conf.py  pyproject.toml
services/cms_mock_soap/app/: __init__.py  main.py
services/integration_service/: Dockerfile  gunicorn_conf.py  pyproject.toml
services/integration_service/app/: __init__.py  main.py
services/integration_service/app/core/: __init__.py  config.py  events.py
services/integration_service/app/dependencies/: __init__.py
services/integration_service/app/models/: __init__.py
services/integration_service/app/routers/: __init__.py  health.py
services/integration_service/app/schemas/: __init__.py
services/integration_service/app/services/: __init__.py  cms_client.py  rabbitmq.py  ros_client.py  saga.py  wms_client.py
services/notification_service/: Dockerfile  gunicorn_conf.py  pyproject.toml
services/order_service/: Dockerfile  alembic.ini  gunicorn_conf.py  pyproject.toml  start.sh
services/ros_mock_rest/: Dockerfile  gunicorn_conf.py  pyproject.toml
services/wms_mock_tcp/: Dockerfile  pyproject.toml
services/wms_mock_tcp/app/: __init__.py  health_app.py  main.py  tcp_server.py
services/wms_mock_tcp/app/core/: __init__.py  config.py
services/wms_mock_tcp/app/dependencies/: __init__.py
services/wms_mock_tcp/app/models/: __init__.py
services/wms_mock_tcp/app/schemas/: __init__.py
services/wms_mock_tcp/app/services/: __init__.py
shared/: pyproject.toml
shared/shared/: __init__.py  config.py  health.py  logging.py  middleware.py  rabbitmq.py
(+68 files in other folders)
