[tool.poetry]
name = "swifttrack-shared"
version = "0.1.0"
description = "Shared utilities for SwiftTrack microservices"
authors = ["SwiftTrack Team"]
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115,<1.0"
pydantic = ">=2.0,<3.0"
pydantic-settings = ">=2.0,<3.0"
structlog = ">=24.0"
uvicorn = {version = ">=0.32", extras = ["standard"]}
aio-pika = ">=9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
