[tool.poetry]
name = "integration-service"
version = "0.1.0"
description = "SwiftTrack Integration Service — orchestrates external system calls"
authors = ["SwiftTrack Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115,<1.0"
uvicorn = {version = ">=0.32", extras = ["standard"]}
gunicorn = ">=22.0"
pydantic = ">=2.0,<3.0"
pydantic-settings = ">=2.0,<3.0"
structlog = ">=24.0"
httpx = ">=0.27"
aio-pika = ">=9.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
httpx = ">=0.27"
ruff = ">=0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
