[tool.poetry]
name = "wms-mock-tcp"
version = "0.1.0"
description = "SwiftTrack WMS Mock — simulates a TCP-based Warehouse Management System"
authors = ["SwiftTrack Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {version = ">=0.32", extras = ["standard"]}
fastapi = ">=0.115,<1.0"
pydantic = ">=2.0,<3.0"
pydantic-settings = ">=2.0,<3.0"
structlog = ">=24.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
ruff = ">=0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 99
